--- a/main.css
+++ b/main.css
@@ -1,6 +1,25 @@
 body {
     font-family: "Open Sans", sans-serif;
-    background: url("images/asteroids.jpg") slateblue;
+
     width: 100%;
     height: 100%;
+    text-align: center;
+}
+header{
+    background: url("images/asteroids.jpg") slateblue;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+}
+.header--text{
+    margin-top: 10%;
+    margin-left: 10%;
+    margin-right: 10%;
+    border: black dashed 2px;
+    border-radius: 10px;
+    background-color: rgba(255, 220, 80, 0.81);
+    color: white;
+    font-size: 64px;
 }
