--- a/main.css
+++ b/main.css
@@ -1,9 +1,9 @@
 body {
     font-family: "Open Sans", sans-serif;
-
     width: 100%;
     height: 100%;
     text-align: center;
+    text-shadow: 1px 1px 15px black;
 }
 header{
     background: url("images/asteroids.jpg") slateblue;
