--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ body {
     width: 100%;
     height: 100%;
     text-align: center;
-    text-shadow: 1px 1px 15px black;
+    text-shadow: 2px 1px 10px black;
 }
 header{
     background: url("images/asteroids.jpg") slateblue;
@@ -17,7 +17,7 @@ header{
     margin-top: 10%;
     margin-left: 10%;
     margin-right: 10%;
-    border: black dashed 3px;
+    border: rgba(0, 0, 0, 0.6) dashed 3px;
     border-radius: 10px;
     background-color: rgba(255, 220, 80, 0.95);
     color: white;
