--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ header{
     height: 100%;
     width: 100%;
 }
-#header--text{
+#header-text{
     margin-top: 10%;
     margin-left: 10%;
     margin-right: 10%;
