--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,9 @@ header{
     margin-right: 10%;
     border: rgba(0, 0, 0, 0.8) dashed 3px;
     border-radius: 15px;
-    background-color: rgba(255, 222, 0, 0.7);
+    background-color: rgba(255, 222, 0, 0.0);
     color: white;
     font-size: 64px;
+    -webkit-text-stroke: 2px rgba(0, 0, 0, 0.7);
+    box-shadow: 0 5px 50px black;
 }
