--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
     text-shadow: 1px 1px 10px black;
 }
 header{
-    background: url("../images/asteroids.jpg") slateblue;
+    background: url("../images/asteroids.jpg") #1c1c40;
     position: absolute;
     top: 0;
     left: 0;
