--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,37 @@
-body {
-    font-family: "Open Sans", sans-serif;
+body
+{
+    font-family: 'Open Sans', sans-serif;
+
     width: 100%;
     height: 100%;
+
     text-align: center;
+
     text-shadow: 1px 1px 10px black;
 }
-header{
-    background: url("../images/asteroids.jpg") #1c1c40;
+header
+{
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
+
     width: 100%;
+    height: 100%;
+
+    background: url('../images/asteroids.jpg') #1c1c40;
 }
-#header-text{
-    margin-top: 10%;
-    margin-left: 10%;
-    margin-right: 10%;
-    border: rgba(0, 0, 0, 0.8) dashed 3px;
-    border-radius: 15px;
-    background-color: rgba(255, 222, 0, 0.0);
-    color: white;
+#header-text
+{
     font-size: 64px;
-    -webkit-text-stroke: 2px rgba(0, 0, 0, 0.7);
-    box-shadow: 0 5px 50px black;
+
+    margin-top: 10%;
+    margin-right: 10%;
+    margin-left: 10%;
+
+    color: white;
+    border: rgba(0, 0, 0, .8) dashed 3px;
+    border-radius: 15px;
+    background-color: rgba(255, 222, 0, .0);
+
+    -webkit-text-stroke: 2px rgba(0, 0, 0, .7);
 }
